Create new folder structure

--- a/notebooks/nb_pca_old.ipynb
+++ b/notebooks/nb_pca_old.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simple PCA line prediction\n",
+    "\n",
+    "This notebook uses PCA to predict the line of best fit to the data. It uses a single PCA component to predict the line of best fit to the data and reducing the dimensionality of the data to 1."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
     "DATA_DIR = \"./data\"\n",
     "BATCH = 1\n",
-    "EVENT = 24\n",
-    "EXCLUDE_AUXILIARY= True"
+    "EVENT = 59\n",
+    "EXCLUDE_AUXILIARY= False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +43,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 191,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([24, 41, 59, ..., 2147483617, 2147483626, 2147483627], dtype=object)"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "train_meta_df = pd.read_parquet(f'{DATA_DIR}/train_meta.parquet', engine='fastparquet')"
+    "train_meta_df = pd.read_parquet(f'{DATA_DIR}/train_meta.parquet', engine='fastparquet')\n",
+    "train_meta_df['event_id'].to_numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,71 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 196,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0     -9.68\n",
-       " 1     35.54\n",
-       " 2     35.54\n",
-       " 3     35.54\n",
-       " 4     35.54\n",
-       " 5     35.54\n",
-       " 6     35.54\n",
-       " 7     35.54\n",
-       " 8    -43.27\n",
-       " 9    -43.27\n",
-       " 10   -43.27\n",
-       " 11    35.54\n",
-       " 12    35.54\n",
-       " Name: x, dtype: float64,\n",
-       " 0     -79.50\n",
-       " 1    -364.83\n",
-       " 2    -364.83\n",
-       " 3    -364.83\n",
-       " 4    -364.83\n",
-       " 5    -364.83\n",
-       " 6    -364.83\n",
-       " 7    -364.83\n",
-       " 8    -267.52\n",
-       " 9    -267.52\n",
-       " 10   -267.52\n",
-       " 11   -364.83\n",
-       " 12   -364.83\n",
-       " Name: y, dtype: float64,\n",
-       " 0    -219.49\n",
-       " 1     191.34\n",
-       " 2     191.34\n",
-       " 3     208.36\n",
-       " 4     208.36\n",
-       " 5     208.36\n",
-       " 6     208.36\n",
-       " 7     276.44\n",
-       " 8     295.88\n",
-       " 9     278.85\n",
-       " 10    244.81\n",
-       " 11    157.30\n",
-       " 12    259.42\n",
-       " Name: z, dtype: float64)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "x, y, z = event_df['x'], event_df['y'], event_df['z']\n",
-    "x, y, z"
+    "# x, y, z"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,30 +156,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_line(origin, vector, extent):\n",
-    "    below_origin = origin - direction_vector * extent\n",
-    "    above_origin = origin + direction_vector * extent\n",
+    "    origin = np.array(origin)  # convert to NumPy array\n",
+    "    vector = np.array(vector)  # convert to NumPy array\n",
+    "    below_origin = origin - vector * extent\n",
+    "    above_origin = origin + vector * extent\n",
     "    line = np.vstack((below_origin, above_origin))\n",
     "    return line"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  35.75050904, -551.97437526,  610.96714325],\n",
-       "       [  -8.00127827,  -88.87639397, -224.91637402]])"
+       "array([[  27.4203288 ,  487.78462344, -882.94015341],\n",
+       "       [-207.33421769, -291.14795677,  504.41793119]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,16 +196,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  13.87461538, -320.42538462,  193.02538462])"
+       "array([ -89.95694444,   98.31833333, -189.26111111])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,16 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3.55271368e-15, -5.68434189e-14, -5.68434189e-14])"
+       "array([0., 0., 0.])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,16 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.2711606932818947, -0.8260880094077094, -0.4940146547742188)"
+       "(0.26887871688526843, 0.6180777630599297, -0.738704348448664)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,40 +272,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  21.87589365, -231.54899065,  417.94175863],\n",
-       "       [ -21.87589365,  231.54899065, -417.94175863]])"
+       "array([[-216.21795194, -497.02523732,  594.02671645],\n",
+       "       [ 216.21795194,  497.02523732, -594.02671645]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "truth_trace = get_line([0,0,0], [x,y,z], extent)\n",
+    "truth_trace = get_line([0,0,0], [[x,y,z]], extent)\n",
     "truth_trace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 21.87589365, -21.87589365]),\n",
-       " array([-231.54899065,  231.54899065]),\n",
-       " array([ 417.94175863, -417.94175863]))"
+       "(array([-216.21795194,  216.21795194]),\n",
+       " array([-497.02523732,  497.02523732]),\n",
+       " array([ 594.02671645, -594.02671645]))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -365,19 +337,42 @@
         {
          "marker": {
           "color": [
-           9868,
-           12201,
-           12339,
-           12206,
-           12227,
-           12377,
-           12436,
-           12607,
-           12723,
-           12773,
-           12818,
-           13081,
-           13262
+           6601,
+           6896,
+           7826,
+           7866,
+           11861,
+           15223,
+           8377,
+           8419,
+           15263,
+           9014,
+           9883,
+           10450,
+           9908,
+           9911,
+           9925,
+           9939,
+           9978,
+           10039,
+           9964,
+           10036,
+           10089,
+           10117,
+           11539,
+           10117,
+           10347,
+           13016,
+           10546,
+           10605,
+           10807,
+           11108,
+           11328,
+           11540,
+           13291,
+           14159,
+           15049,
+           15362
           ],
           "opacity": 1,
           "size": 5
@@ -386,49 +381,118 @@
          "name": "Detected",
          "type": "scatter3d",
          "x": [
-          -9.68,
-          35.54,
-          35.54,
-          35.54,
-          35.54,
-          35.54,
-          35.54,
-          35.54,
-          -43.27,
-          -43.27,
-          -43.27,
-          35.54,
-          35.54
+          31.25,
+          303.41,
+          -256.14,
+          -156.23,
+          -156.23,
+          -156.23,
+          -334.8,
+          -290.66,
+          -290.66,
+          -156.23,
+          -66.7,
+          -66.7,
+          -66.7,
+          -66.7,
+          -66.7,
+          -66.7,
+          -66.7,
+          -66.7,
+          -66.7,
+          -66.7,
+          132.03,
+          -66.7,
+          -66.7,
+          -66.7,
+          -358.44,
+          -358.44,
+          -66.7,
+          330.03,
+          11.87,
+          -290.66,
+          -21.97,
+          -290.66,
+          -121.77,
+          472.05,
+          -347.88,
+          1.71
          ],
          "y": [
-          -79.5,
-          -364.83,
-          -364.83,
-          -364.83,
-          -364.83,
-          -364.83,
-          -364.83,
-          -364.83,
-          -267.52,
-          -267.52,
-          -267.52,
-          -364.83,
-          -364.83
+          -72.93,
+          335.64,
+          -521.08,
+          43.37,
+          43.37,
+          43.37,
+          -424.5,
+          -307.38,
+          -307.38,
+          43.37,
+          276.92,
+          276.92,
+          276.92,
+          276.92,
+          276.92,
+          276.92,
+          276.92,
+          276.92,
+          276.92,
+          276.92,
+          202.98,
+          276.92,
+          276.92,
+          276.92,
+          120.56,
+          120.56,
+          276.92,
+          127.2,
+          179.19,
+          -307.38,
+          393.24,
+          -307.38,
+          -171.03,
+          127.9,
+          451.52,
+          -150.63
          ],
          "z": [
-          -219.49,
-          191.34,
-          191.34,
-          208.36,
-          208.36,
-          208.36,
-          208.36,
-          276.44,
-          295.88,
-          278.85,
-          244.81,
-          157.3,
-          259.42
+          138.23,
+          87.44,
+          240.72,
+          449.77,
+          449.77,
+          449.77,
+          -401.51,
+          10.54,
+          10.54,
+          -111.91,
+          -506.4,
+          -506.4,
+          -489.38,
+          -489.38,
+          -489.38,
+          -489.38,
+          -489.38,
+          -489.38,
+          -472.36,
+          -472.36,
+          26.15,
+          -438.32,
+          -438.32,
+          -455.34,
+          38.5,
+          38.5,
+          -370.23,
+          -486.34,
+          -450.32,
+          -278.81,
+          -129.95,
+          -210.73,
+          -161.54,
+          385.13,
+          8.4,
+          -319.74
          ]
         },
         {
@@ -443,16 +507,16 @@
          "name": "Predicted",
          "type": "scatter3d",
          "x": [
-          35.75050903503165,
-          -8.00127826580089
+          27.420328796629462,
+          -207.33421768551833
          ],
          "y": [
-          -551.9743752645486,
-          -88.87639396622063
+          487.7846234373862,
+          -291.14795677071953
          ],
          "z": [
-          610.9671432477519,
-          -224.9163740169826
+          -882.9401534131628,
+          504.41793119094064
          ]
         },
         {
@@ -467,16 +531,16 @@
          "name": "Truth",
          "type": "scatter3d",
          "x": [
-          21.87589365041627,
-          -21.87589365041627
+          -216.2179519438672,
+          216.2179519438672
          ],
          "y": [
-          -231.54899064916395,
-          231.54899064916395
+          -497.02523732248136,
+          497.02523732248136
          ],
          "z": [
-          417.9417586323672,
-          -417.9417586323672
+          594.0267164461089,
+          -594.0267164461089
          ]
         }
        ],
@@ -1301,6 +1365,18 @@
            "zerolinewidth": 2
           }
          }
+        },
+        "xaxis": {
+         "range": [
+          -804.1467708882598,
+          804.1467708882598
+         ]
+        },
+        "yaxis": {
+         "range": [
+          -804.1467708882598,
+          804.1467708882598
+         ]
         }
        }
       }
@@ -1343,34 +1419,40 @@
     "            ),\n",
     "            name=\"Truth\"\n",
     "        )\n",
-    "    ],\n",
-    "    \n",
-    "    )\n",
+    "    ])\n",
+    "\n",
+    "# Set x and y axis ranges\n",
+    "fig3.update_xaxes(range=[-extent, extent])\n",
+    "fig3.update_yaxes(range=[-extent, extent])\n",
+    "# fig3.update_zaxes(range=[-extent, extent])\n",
+    "\n",
     "# Add a legend\n",
-    "fig3.update_layout(showlegend=True, legend=dict(x=0, y=1))\n",
+    "fig3.update_layout(\n",
+    "    showlegend=True, \n",
+    "    legend=dict(x=0, y=1),)\n",
     "\n",
     "fig3.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import angular_dist_score, adjust_sphere, cartesian_to_sphere"
+    "from utils import angular_dist_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r 1.0 x2y2 0.7559495208683096\n"
+      "r 1.0 x2y2 0.45431588558303493\n"
      ]
     },
     {
@@ -1379,7 +1461,7 @@
        "0.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1546,7 @@
        "2       661      9482                335               377"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1700,7 @@
        "[378 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1630,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1639,7 +1721,7 @@
        "[2092, 7344, 9482]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1651,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1688,7 +1770,7 @@
        "3"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1702,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1710,10 +1792,31 @@
      "output_type": "stream",
      "text": [
       "direction [[0.39323753 0.7327785  0.55533767]]\n",
+      "Getting line with vector [[0.39323753 0.7327785  0.55533767]]\n",
+      "From origin [-260.73147157 -374.10337793 -400.83702341]\n",
+      "With extent 1178.3822972960133\n",
+      "Below origin [[ -724.11560973 -1237.59658629 -1055.23709843]]\n",
+      "Above origin [[202.65266659 489.38983044 253.56305161]]\n",
+      "Line [[ -724.11560973 -1237.59658629 -1055.23709843]\n",
+      " [  202.65266659   489.38983044   253.56305161]]\n",
       "r 2356.7645945920267 x2y2 3841381.5215826244\n",
       "direction [[ 0.45656735 -0.63621559  0.62191316]]\n",
+      "Getting line with vector [[ 0.45656735 -0.63621559  0.62191316]]\n",
+      "From origin [ 62.28944444 -93.72694444  89.94861111]\n",
+      "With extent 703.6149893114816\n",
+      "Below origin [[-258.95818456  353.92388214 -347.63881045]]\n",
+      "Above origin [[ 383.53707345 -541.37777102  527.53603267]]\n",
+      "Line [[-258.95818456  353.92388214 -347.63881045]\n",
+      " [ 383.53707345 -541.37777102  527.53603267]]\n",
       "r 1407.2299786229635 x2y2 1214365.2067069958\n",
       "direction [[0.37338752 0.6023134  0.70554966]]\n",
+      "Getting line with vector [[0.37338752 0.6023134  0.70554966]]\n",
+      "From origin [-37.26953488  29.73976744 -65.75906977]\n",
+      "With extent 700.3723214742158\n",
+      "Below origin [[-298.77981575 -392.10386813 -559.90652632]]\n",
+      "Above origin [[224.24074598 451.58340302 428.38838678]]\n",
+      "Line [[-298.77981575 -392.10386813 -559.90652632]\n",
+      " [ 224.24074598  451.58340302  428.38838678]]\n",
       "r 1400.744642948432 x2y2 985358.7194898824\n"
      ]
     },
@@ -1725,7 +1828,7 @@
        " [1.0158567198575796, 0.7875978411980064]]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1755,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1814,7 +1917,7 @@
        "0     2092  1.078269  0.982027"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1830,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
