Plot all in one funtion and remove old

--- a/notebooks/pca.ipynb
+++ b/notebooks/pca.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,26 +20,32 @@
     "sys.path.append('..')\n",
     "\n",
     "\n",
-    "\n",
     "import pandas as pd \n",
     "from scripts.utils import seed_it_all\n",
-    "from scripts.plot import compose_event_df"
+    "from scripts.plot import compose_event_df, plot_pca, get_event_true_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Optional\n",
+    "\n",
+    "\n",
     "DATA_DIR = \"../data\"\n",
-    "EVENT = None # set to None to use a random event, or set to a specific event id\n",
-    "EXCLUDE_AUXILIARY= False # set to True to exclude auxiliary sensor readings"
+    "EVENT: Optional[int] = None # set to None to use a random event, or set to a specific event id\n",
+    "EXCLUDE_AUXILIARY= False # set to True to exclude auxiliary sensor readings\n",
+    "IS_TRAINING = True # set to True to use the training data, or False to use the test data\n",
+    "\n",
+    "\n",
+    "DATA_SET = 'train' if IS_TRAINING else 'test' # DO NOT CHANGE THIS LINE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,280 +54,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([869741514, 268], dtype=object)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "meta_df = pd.read_parquet(f'{DATA_DIR}/train_meta.parquet', engine='fastparquet')\n",
-    "meta_df[['event_id', 'batch_id']].sample(n=1).values[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_df = pd.read_parquet(f'{DATA_DIR}/train/batch_{BATCH}.parquet', engine='fastparquet').reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "meta_df = pd.read_parquet(f'{DATA_DIR}/{DATA_SET}_meta.parquet')\n",
     "sensor_geometry = pd.read_csv(f'{DATA_DIR}/sensor_geometry.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['event_id', 'sensor_id', 'time', 'charge', 'auxiliary', 'x', 'y', 'z'], dtype='object')"
+       "(1220830349, 376)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "event_df = compose_event_df(batch_df, EVENT, sensor_geometry)"
+    "# Get a random event_id and associated batch_id from meta_df\n",
+    "# If EVENT is given, use that instead of a random event_id\n",
+    "event_id, batch_id = \\\n",
+    "    meta_df[['event_id', 'batch_id']].sample(n=1).values[0] \\\n",
+    "    if not EVENT \\\n",
+    "    else (\n",
+    "        EVENT, \n",
+    "        meta_df[meta_df['event_id']==EVENT]['batch_id'].values[0]\n",
+    "    )\n",
+    "    \n",
+    "event_id, batch_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "x, y, z = event_df['x'], event_df['y'], event_df['z']\n",
-    "# x, y, z"
+    "batch_df = pd.read_parquet(f'{DATA_DIR}/train/batch_{batch_id}.parquet', engine='fastparquet').reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coords = np.array((x,y,z)).T"
+    "event_df = compose_event_df(batch_df, event_id, sensor_geometry)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List, Tuple\n",
-    "from sklearn.decomposition import PCA\n",
-    "\n",
-    "def get_direction(coords: np.ndarray) -> np.ndarray:\n",
-    "    \"\"\"\n",
-    "    Get the direction vector from a list of coordinates.\n",
-    "    \"\"\"\n",
-    "    pca = PCA(n_components=1)\n",
-    "    pca.fit(coords) \n",
-    "    direction_vector = pca.components_#type: ignore\n",
-    "    return direction_vector"
+    "true_values = get_event_true_values(meta_df, event_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "direction_vector = get_direction(coords)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 211,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_line(origin_coords, vector, extent:int) -> np.ndarray:\n",
-    "    \"\"\"Get a line from a point in a direction.\n",
-    "\n",
-    "    Args:\n",
-    "        origin_coords (List or Array): The coordinates of the origin of the line.\n",
-    "        vector (List or Array): The direction of the line from the origin.\n",
-    "        extent (int): The extent of the line in both directions.\n",
-    "\n",
-    "    Returns:\n",
-    "        array: The coordinates of the line.\n",
-    "    \"\"\"\n",
-    "    origin_coords = np.array(origin_coords)  # convert to NumPy array\n",
-    "    vector = np.array(vector)  # convert to NumPy array\n",
-    "    below_origin = origin_coords - vector * extent\n",
-    "    above_origin = origin_coords + vector * extent\n",
-    "    line = np.vstack((below_origin, above_origin))\n",
-    "    return line"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  27.4203288 ,  487.78462344, -882.94015341],\n",
-       "       [-207.33421769, -291.14795677,  504.41793119]])"
-      ]
-     },
-     "execution_count": 212,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'sphere_to_cartesian' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m plot_pca(event_df\u001b[39m=\u001b[39;49mevent_df, labels\u001b[39m=\u001b[39;49mtrue_values, exclude_axillary\u001b[39m=\u001b[39;49mEXCLUDE_AUXILIARY)\n",
+      "File \u001b[0;32m~/Desktop/Neutrino-Particle-Direction-Predictor/notebooks/../scripts/plot.py:105\u001b[0m, in \u001b[0;36mplot_pca\u001b[0;34m(event_df, labels, exclude_axillary)\u001b[0m\n\u001b[1;32m    103\u001b[0m azimuth \u001b[39m=\u001b[39m labels[\u001b[39m'\u001b[39m\u001b[39mazimuth\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m    104\u001b[0m zenith\u001b[39m=\u001b[39m labels[\u001b[39m'\u001b[39m\u001b[39mzenith\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m--> 105\u001b[0m x,y,z \u001b[39m=\u001b[39m sphere_to_cartesian(azimuth, zenith) \u001b[39m#type: ignore\u001b[39;00m\n\u001b[1;32m    107\u001b[0m truth_trace \u001b[39m=\u001b[39m get_line([\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m], [[x,y,z]], extent)\n\u001b[1;32m    108\u001b[0m fig3 \u001b[39m=\u001b[39m go\u001b[39m.\u001b[39mFigure(data \u001b[39m=\u001b[39m [\n\u001b[1;32m    109\u001b[0m         go\u001b[39m.\u001b[39mScatter3d(\n\u001b[1;32m    110\u001b[0m             x\u001b[39m=\u001b[39mevent_df[\u001b[39m'\u001b[39m\u001b[39mx\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mto_numpy(), y\u001b[39m=\u001b[39mevent_df[\u001b[39m'\u001b[39m\u001b[39my\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mto_numpy(), z\u001b[39m=\u001b[39mevent_df[\u001b[39m'\u001b[39m\u001b[39mz\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mto_numpy(),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    138\u001b[0m         )\n\u001b[1;32m    139\u001b[0m ])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sphere_to_cartesian' is not defined"
+     ]
     }
    ],
    "source": [
-    "origin = np.mean(coords, axis=0)\n",
-    "euclidean_distance = np.linalg.norm(coords - origin, axis=1)\n",
-    "extent = np.max(euclidean_distance)\n",
-    "line = get_line(origin, direction_vector, extent)\n",
-    "line"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ -89.95694444,   98.31833333, -189.26111111])"
-      ]
-     },
-     "execution_count": 202,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mean = np.mean(line, axis=0)\n",
-    "mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 203,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0.])"
-      ]
-     },
-     "execution_count": 203,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "points = line - mean\n",
-    "np.sum(points, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 204,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import sphere_to_cartesian, adjust_sphere, cartesian_to_sphere"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 205,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.26887871688526843, 0.6180777630599297, -0.738704348448664)"
-      ]
-     },
-     "execution_count": 205,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "train_metadata=train_meta_df[(train_meta_df['event_id'] == EVENT) & (train_meta_df['batch_id'] == BATCH)]\n",
-    "azimuth = train_metadata['azimuth'].values[0]\n",
-    "zenith= train_metadata['zenith'].values[0]\n",
-    "x,y,z = sphere_to_cartesian(azimuth, zenith) #type: ignore\n",
-    "x,y,z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-216.21795194, -497.02523732,  594.02671645],\n",
-       "       [ 216.21795194,  497.02523732, -594.02671645]])"
-      ]
-     },
-     "execution_count": 206,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "truth_trace = get_line([0,0,0], [[x,y,z]], extent)\n",
-    "truth_trace"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 207,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([-216.21795194,  216.21795194]),\n",
-       " array([-497.02523732,  497.02523732]),\n",
-       " array([ 594.02671645, -594.02671645]))"
-      ]
-     },
-     "execution_count": 207,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "truth_trace[:,0], truth_trace[:,1], truth_trace[:,2]"
+    "plot_pca(event_df=event_df, labels=true_values, exclude_axillary=EXCLUDE_AUXILIARY)"
    ]
   },
   {
