--- a/notebooks/xgboost.ipynb
+++ b/notebooks/xgboost.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,7 @@
     "import random\n",
     "import math\n",
     "import logging\n",
+    "import sys\n",
     "\n",
     "# Third-party library imports\n",
     "import numpy as np\n",
@@ -45,7 +46,9 @@
     "import dask.dataframe as dd\n",
     "\n",
     "# Typing imports\n",
-    "from typing import List, Tuple\n"
+    "from typing import List, Tuple\n",
+    "\n",
+    "sys.path.append('..')\n"
    ]
   },
   {
